--- a/client/templates/allNewsEvents.html
+++ b/client/templates/allNewsEvents.html
@@ -4,15 +4,13 @@
 			{{#each newsEventsData}}
 			<!-- <li><a href="{{pathFor route='news-and-events'}}">read more</a></li> -->
 			<li>{{title}}</li>
-			<a href="/news-and-events/{{_id}}">read more</a>
+			<a href="{{pathFor route='newsAndEventsPage'}}">read more</a>
 
 			<a href ="/news-and-events/{{ _id }}">
 			  <img alt="" src="{{ coverImage.url }}" />
 			</a>
-			
-			<h1>{{ attachment.url }} {{attachmentId}}</h1>
 
-			<li><a href="{{ attachment.url }}">Download</a></li>
+			<li><a href="{{ attachment.url }}">{{attachment.original.name}}</a></li>
 
 			<hr>
 			<!-- {{> allNewsEventItem}} -->
