--- a/client/templates/admin/admin-publications.html
+++ b/client/templates/admin/admin-publications.html
@@ -4,7 +4,7 @@
 		<form class="form-horizontal" role="form">
 
 	        <div class="form-group">
-	            <label for="title" class="col-sm-2 control-label">Title</label>                        
+	            <label for="title" class="col-sm-2 control-label">Title</label>
 	        	<div class="col-sm-10">
 	            	<input type="text" class="form-control" id="title" name="title" placeholder="Enter Title">
 	            </div>
@@ -26,18 +26,18 @@
 
 	        <div class="form-group">
 	            <label for="abstract" class="col-sm-2 control-label">Abstract</label>
-	            <div class="col-sm-10">    
+	            <div class="col-sm-10">
 					<textarea type="message" rows="6" class="form-control" id="abstract" name="abstract" placeholder="Enter Abstract"></textarea>
 	            </div>
 	        </div>
 
-	        <div class="form-group">
+	        <div class="form-group js-radios">
 	            <label for="Outlet" class="col-sm-2 control-label">Outlet</label>
 	            <div class="col-sm-10">
-                  <label class="radio-inline"><input type="radio" name="outlet-type" value="wp">Working Paper</label>
-                  <label class="radio-inline"><input type="radio" name="outlet-type" value="pp">Published Paper</label>
-                  <label class="radio-inline"><input type="radio" name="outlet-type" value="bk">Book</label>
-                  <label class="radio-inline"><input type="radio" name="outlet-type" value="bc">Book Chapter</label>
+                  <label class="radio-inline"><input type="radio" name="outlet-type" id="wp" value="wp">Working Paper</label>
+                  <label class="radio-inline"><input type="radio" name="outlet-type" id="pp" value="pp">Published Paper</label>
+                  <label class="radio-inline"><input type="radio" name="outlet-type" id="bk" value="bk">Book</label>
+                  <label class="radio-inline"><input type="radio" name="outlet-type" id="bc" value="bc">Book Chapter</label>
 	            </div>
 	        </div>
 
@@ -51,4 +51,3 @@
 
 	</div>
 </template>
-
