--- a/client/templates/admin/admin-news-events-edit.html
+++ b/client/templates/admin/admin-news-events-edit.html
@@ -11,11 +11,18 @@
 	            </div>
 	        </div>
 
-	        <div class="form-group">
+	        <!-- <div class="form-group">
 	            <label for="description" class="col-sm-2 control-label">Description</label>
 	            <div class="col-sm-10">
 	                <textarea type="message" class="form-control" value="{{description}}" id="description" name="description" placeholder="Enter Description"></textarea>
 	            </div>
+	        </div> {{description}} --> 
+
+	        <div class="form-group">
+	            <label for="description" class="col-sm-2 control-label">Description</label>
+	            <div class="col-sm-10">
+	            	<div id="description"></div>
+            	</div>
 	        </div>
 
 	        <div class="form-group">
