--- a/client/templates/admin/admin-news-events-edit.html
+++ b/client/templates/admin/admin-news-events-edit.html
@@ -21,7 +21,9 @@
 	        <div class="form-group">
 	            <label for="description" class="col-sm-2 control-label">Description</label>
 	            <div class="col-sm-10">
-	            	<div id="description"></div>
+	            	<div name="description" id="description">
+	            		{{{description}}}
+	            	</div>
             	</div>
 	        </div>
 
