--- a/client/templates/admin/admin-news-events.html
+++ b/client/templates/admin/admin-news-events.html
@@ -10,13 +10,22 @@
 	            </div>
 	        </div>
 
-	        <div class="form-group">
+	        <!-- <div class="form-group">
 	            <label for="description" class="col-sm-2 control-label">Description</label>
 	            <div class="col-sm-10">
 	                <textarea type="message" class="form-control" id="description" name="description" placeholder="Enter Description"></textarea>
 	            </div>
-	        </div>
+	        </div> -->
 
+			 <div class="form-group">
+	            <label for="description" class="col-sm-2 control-label">Description</label>
+	            <div class="col-sm-10">
+	            	<div name="description" id="description">
+	            		{{{description}}}
+	            	</div>
+            	</div>
+	        </div>
+			
 	        <div class="form-group">
 	            <label for="description" class="col-sm-2 control-label">Type</label>
 	            <div class="col-sm-10">
