--- a/client/templates/admin/admin-publications.html
+++ b/client/templates/admin/admin-publications.html
@@ -1,7 +1,7 @@
 <template name="adminPublications">
 	<!-- {{> formNewsEvents}} -->
 	<div class="container">
-		<form class="form-horizontal" role="form">
+		<form class="form-horizontal" id="addPub" role="form">
 
 	        <div class="form-group">
 	            <label for="title" class="col-sm-2 control-label">Title</label>
@@ -33,12 +33,25 @@
 	            </div>
 	        </div>
 
-	        <div class="form-group">
+	       <!--  <div class="form-group">
 	            <label for="abstract" class="col-sm-2 control-label">Abstract</label>
 	            <div class="col-sm-10">
 					<textarea type="message" rows="6" class="form-control" id="abstract" name="abstract" placeholder="Enter Abstract"></textarea>
 	            </div>
+	        </div> -->
+
+	         <div class="form-group">
+	            <label for="abstract" class="col-sm-2 control-label">Abstract</label>
+	            <div class="col-sm-10">
+			      	<div name="abstract" id="abstract">
+		        		{{{abstract}}}
+		        	</div>
+	            </div>
 	        </div>
+
+	      	<div name="description" id="description">
+        		{{{description}}}
+        	</div>
 			
 			{{#if ppSelected}}	
 	         <div class="form-group">
