--- a/client/templates/members/allNewsEvents.html
+++ b/client/templates/members/allNewsEvents.html
@@ -24,5 +24,5 @@
 	<a href="{{pathFor route='allNewsEvents'}}" class="btn btn-info" role="button">Back</a>
 	<!-- <a href="{{pathFor route='news-and-events'}}">read more</a> -->
 	<hr>
-	{{description}}
+	{{{description}}}
 </template>
