--- a/client/templates/admin/admin-news-events-lists.html
+++ b/client/templates/admin/admin-news-events-lists.html
@@ -1,6 +1,6 @@
 <template name="adminNewsEventsList">
 	<div class="container">
-		<div class="col-md-6 col-md-offset-3">
+		<div class="col-md-6 col-md-offset-3 putdown">
 			{{#each newsEventsData}}
 			<ul class="list-group">
 				<li class="list-group-item">
