--- a/client/templates/guests/newsEventsPage.html
+++ b/client/templates/guests/newsEventsPage.html
@@ -12,7 +12,7 @@
 			<div class="container">
 					<div class="row">
 							<!-- Back-Button 1 -->
-							<div class="col-sm-2 col-sm-offset-1 col-xs-12">
+							<div class="col-sm-2 col-sm-offset-1 col-xs-12 js-back">
 									<div class="btn btn-primary btn-icon">        
 											<span class="glyphicon glyphicon-circle-arrow-left"></span> BACK
 									</div>
@@ -27,19 +27,13 @@
 							</div> <!-- ./ Info-->
 							<!-- Back-Button 2 -->
 							<div class="col-sm-2 col-sm-offset-1 col-xs-12">
-									<div class="btn btn-primary btn-icon">        
+									<div class="btn btn-primary btn-icon js-back">        
 											<span class="glyphicon glyphicon-circle-arrow-left"></span> BACK
 									</div>
 							</div>
 					</div>
 			</div>
 	</section> <!-- ./News or Event -->
-
-	<script>
-			$(document).ready(function(){
-			$('[data-toggle="tooltip"]').tooltip();
-			 });
-	</script>
 </template>
 
 <template name="later">
