--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -921,6 +921,11 @@ ul.list-inline.social-buttons {
 		font-size: 18px;
 }
 
+/*admin edit button*/
+.glyphicon-edit {
+		font-size: 18px;
+}
+
 .button-download {
 		padding: 3px 5px 0px 5px;
 }
