--- a/client/templates/members/bibliographyMembers.html
+++ b/client/templates/members/bibliographyMembers.html
@@ -30,6 +30,10 @@
 				</div>
 			</div> 
 		</section><!-- ./Search -->
+
+		
+			<h2>I'm an admin</h2>
+		
 	
 	<!-- Bibliography Table Section -->
     <section id="services">
@@ -64,9 +68,15 @@
 							</ul>
 								
 						</td>
-						<td><a class="tbody-link" href="#">{{title}}</a></td>
-						<td><a class="tbody-link" href="#">{{outlet}}</a></td>
-						<td><button type="button" class="button-download btn btn-primary btn-sm"><span class="glyphicon glyphicon-download"></span></button></td>
+						<td><a class="tbody-link" href="{{pathFor route = 'bibliographyPage'}}">{{title}}</a></td>
+						<td>{{outlet}}</td>
+						<td>
+							<button type="button" class="button-download btn btn-primary btn-sm"><span class="glyphicon glyphicon-download"></span></button> 
+
+							{{#if isInRole 'admin'}}
+							<button type="button" class="button-download btn btn-primary btn-sm js-editPub"><span class="glyphicon glyphicon-edit"></span></button>
+							{{/if}}
+							</td>
 					</tr>
 					{{/each}}
 				</tbody>
@@ -105,8 +115,8 @@
 									</ul>
 										
 								</td>
-								<td><a class="tbody-link" href="#">{{title}}</a></td>
-								<td><a class="tbody-link" href="#">{{outlet}}</a></td>
+								<td><a class="tbody-link" href="{{pathFor route = 'newsAndEventsPage'}}">{{title}}</a></td>
+								<td>{{outlet}}</td>
 								<td><button type="button" class="button-download btn btn-primary btn-sm"><span class="glyphicon glyphicon-download"></span></button></td>
 							</tr>
 							<!-- {{/each}} -->
