--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -4,23 +4,41 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h3 class="footer-head">OUR SPONSORS</h3>
-					<hr class="white">
+					<hr class="footer-hr">
 				</div>
 			</div>
-			<div class="row text-center">
+			<div class="row text-center .extra-spacing-bottom">
 				<div class="col-sm-4 col-xs-12">
-					<img class="sponsor-thumbnail" src="img/logo_uni_zuerich.svg" alt="University of Zurich">
-					<a class="footer-link" href="url">University of Zurich</a>
+					<a href="www.uzh.ch"><img class="sponsor-thumbnail" src="img/logo_uni_zuerich.png" alt="University of Zurich"></a>
 				</div>
 				<div class="col-sm-4">
-					<img class="sponsor-thumbnail" src="img/logo_uni_oxford.jpg" alt="University of Oxford">
-					<a class="footer-link" href="url">University of Oxford</a>
+					<a href="www.ox.ac.uk"><img class="sponsor-thumbnail" src="img/logo_uni_oxford.png"></a>
 				</div>
 				<div class="col-sm-4">
-					<img class="sponsor-thumbnail" src="img/logo_uni_innsbruck.jpg" alt="University of Innsbruck">
-					<a class="footer-link" href="url">University of Innsbruck</a>
+					<a href="www.uibk.ac.at"><img class="sponsor-thumbnail-innsbruck" src="img/logo_uni_innsbruck.png" alt="University of Innsbruck"></a>
 				</div>
 			</div>
+            <!-- <div class="row text-center">
+                <div class="col-sm-4">
+                    <a class="footer-link" href="url">University of Zurich</a>
+                </div>
+                <div class="col-sm-4">
+                    <a class="footer-link" href="url">University of Oxford</a>
+                </div>
+                <div class="col-sm-4">
+                    <a class="footer-link" href="url">University of Innsbruck</a>
+                </div>
+            </div> -->
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <ul class="list-inline quicklinks">
+                        <li><span class="copyright">&copy; Open Strategy Network 2016</span></li>
+                        <li><a class="imprint-link" href="imprint.html">Imprint</a></li>
+<!--                     <li><a href="#">Terms of Use</a></li> -->
+                    </ul>
+                </div>
+            </div>
 		</div> <!-- ./Container -->
 	</footer> <!-- ./Footer -->
+
 </template>
