--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -1,5 +1,5 @@
 <template name="navbar">
-	<!-- Navbar Bootstrap --> 
+	<!-- Navbar Bootstrap -->
 		<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
 				<div class="container-fluid">
 						<!-- Brand and toggle get grouped for better mobile display -->
@@ -11,13 +11,13 @@
 										<span class="icon-bar"></span>
 										<span class="icon-bar"></span>
 								</button>
-								<a class="navbar-brand page-scroll" href="{{pathFor route = 'home'}}"><img src="img/os_logo.png" class="img-responsive" alt="Open Strategy Network"></a>
+								<a class="navbar-brand page-scroll" href="{{pathFor route = 'home'}}"><img src="img/osn_logo.png" class="img-responsive" alt="Open Strategy Network"></a>
 						</div>
 
 						<!-- navbar-collapse for toggling -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav navbar-right">
-										<li class="{{isActiveRoute name='allNewsEvents'}}"> 
+										<li class="{{isActiveRoute name='allNewsEvents'}}">
 											<a class="page-scroll" href="{{pathFor route = 'allNewsEvents'}}">News &amp; Events</a>
 										</li>
 										<li class="{{isActiveRoute name='bibliography'}}">
@@ -33,7 +33,7 @@
 												<a href="{{pathFor route='contact'}}">Contact</a>
 										</li>
 										<form class="navbar-form navbar-right" role="register">
-												<button type="login" class="btn btn-primary">LOG IN</button>
+												<button type="button" class="btn btn-primary btn-login">LOG IN</button>
 										</form>
 								</ul>
 						</div> <!-- /.navbar-collapse -->
