--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h3 class="footer-head">OUR SPONSORS</h3>
+					<h3 class="footer-head">OUR HOSTS</h3>
 					<hr class="footer-hr">
 				</div>
 			</div>
