--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -309,7 +309,7 @@ a.active {
 /*    margin-top: 30px;*/
 }
 
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+.btn-primary:hover, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
 		background: darken(@brand-primary, 10%);
 }
 
@@ -379,7 +379,7 @@ aside {
 
 // Custom Navigation Bar
 
-@media (max-width: 800px) {
+@media (max-width: 816px) {
 		.navbar-header {
 				float: none;
 		}
@@ -419,6 +419,18 @@ aside {
 
         .btn-login {
                 margin-top: 0px!important;
+        }
+
+        .btn-profile {
+                margin-top: 0px!important;
+        }
+
+        a.profile-links {
+                padding-left: 15px!important;
+        }
+
+        p.profile-username {
+                padding-left: 15px!important;
         }
 }
 
@@ -463,10 +475,66 @@ aside {
 }
 
 .btn-login {
-    margin-top: 20px;
+    margin-top: 21px;
+    font-size: 14px;
+    font-weight: 300;
+    padding: 4px 12px 3px 12px;
+}
+
+.btn-profile {
+    margin-top: 29px;
+    margin-left: 15px;
+    font-size: 14px;
+    font-weight: 300;
+    padding: 4px 9px 3px 0px;
+    padding-left: 30px!important;
+    position: relative;
+    padding-left: 44px;
+    text-align: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.btn-profile>:first-child {
+		position: absolute;
+		left: 0;
+		top: -3px;
+		bottom: 0px;
+		width: 25px;
+		line-height: 34px;
+		font-size: 11px;
+		text-align: center;
+		border-right: 1px solid rgba(0,0,0,0.2);
+}
+
+.open > .dropdown-toggle.btn-primary:hover {
+        background-color: darken(@brand-primary, 10%);
+}
+
+.open > .dropdown-toggle.btn-primary:focus {
+    background-color: darken(@brand-primary, 10%);
+}
+
+.dropdown-menu > li > a.profile-links {
+    color: @brand-primary;
+    background-color: transparent;
     font-size: 14px;
     font-weight: 400;
-    padding: 4px 12px 3px 12px;
+    color: @brand-primary;
+    padding-left: 15px;
+}
+
+.dropdown-menu > li > a:hover.profile-links {
+    color: darken(@brand-primary, 10%);
+    background-color: transparent;
+}
+
+p.profile-username {
+    font-size: 12px;
+    font-weight: 700;
+    color: @gray-darkest;
+    padding: 10px 0 10px 15px;
 }
 
 .navbar-default {
@@ -525,6 +593,7 @@ header.home {
 		.background-cover;
 		text-align: center;
 		color: white;
+        text-shadow: 0 0 4px #000;
 		width: 100%;
 		min-height: auto;
 		-webkit-background-size: cover;
@@ -577,9 +646,11 @@ header .header-home .header-home-inner p {
 
 		h1{
 				font-size: 26px;
+                text-shadow: 0 0 4px #000;
 		}
 		h2{
 				font-size: 16px;
+                text-shadow: 0 0 4px #000;
 		}
 
 		.header-home {
