Design Style Header Logged in

--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -37,7 +37,7 @@
 										</form> -->
 
                                         <li class="dropdown">
-                                            <button type="button" href="#" class="dropdown-toggle btn-primary btn-profile" data-toggle="dropdown">
+                                            <button type="button" href="#" class="dropdown-toggle btn-profile" data-toggle="dropdown">
                                                 <span class="glyphicon glyphicon-user"></span>PROFILE <span class="caret"></span>
                                             </button>
                                             <ul class="dropdown-menu" role="menu">
