--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -379,7 +379,7 @@ aside {
 
 // Custom Navigation Bar
 
-@media (max-width: 816px) {
+@media (max-width: 827px) {
 		.navbar-header {
 				float: none;
 		}
@@ -482,8 +482,7 @@ aside {
 }
 
 .btn-profile {
-    margin-top: 29px;
-    margin-left: 15px;
+    margin: 29px 15px 0 15px;
     font-size: 14px;
     font-weight: 300;
     padding: 4px 9px 3px 0px;
@@ -494,6 +493,9 @@ aside {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    background-color: @brand-primary;
+    border: none;
+    color: white;
 }
 
 .btn-profile>:first-child {
