--- a/client/templates/account-templates/joinus.html
+++ b/client/templates/account-templates/joinus.html
@@ -11,8 +11,8 @@
         <div class="header-content-inner">
             <h1>Join us</h1>
             <hr>
-            <h2>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores.</h2>
-            <button href="#joinus" class="btn btn-primary btn-xl page-scroll">JOIN US</button>
+            <h2>As a member of OSN you will become part of a thriving network of scholars interested in open strategy. There are many advantages of joining the OSN. Registration is free.</h2>
+            <button type="button" href="#joinus" class="btn btn-primary btn-xl page-scroll">JOIN US</button>
         </div>
     </div>
   </header> <!-- ./Stage -->
@@ -24,26 +24,26 @@
             <div class="col-sm-4">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-bullhorn fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Advantage</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <p class="text-muted">Submit news to the whole Open Strategy community and disseminate related research findings.</p>
             </div>
             <div class="col-sm-4">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-file-text-o fa-stack-1x fa-inverse joinus-icons"></i>
+                    <i class="fa fa-comments-o fa-stack-1x fa-inverse joinus-icons"></i>
                 </span>
                 <h4 class="service-heading">Advantage</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <p class="text-muted">Cooperate internationally by searching for data on OSN members.</p>
             </div>
             <div class="col-sm-4">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-users fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-newspaper-o fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Advantage</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <p class="text-muted">Search for Open Strategy literature on specific topics within the Bibliography</p>
             </div>
         </div>
     </div>
@@ -53,7 +53,7 @@
   <section class="bg-light-gray extra-spacing-top">
   {{> atForm state='signUp'}}
   </section>
-    
+
   <!--     Registration Form -->
     <section class="bg-light-gray extra-spacing-top">
         <div class="container">
@@ -101,7 +101,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class='form-group'>
-                            <input type="position" class="form-control" id="position" placeholder="Position">
+                            <input type="text" class="form-control" id="position" placeholder="Position">
                         </div>
                     </div>
                     <div class="col-sm-6">
