--- a/client/templates/guests/contact.html
+++ b/client/templates/guests/contact.html
@@ -22,74 +22,72 @@
 	<!-- Services Section -->
 	<section id="services">
 			<div class="container">
-					<div class="row text-center extra-spacing-top">
-							<div class="col-sm-6">
-									<div class="team-member">
-											<img class="contact-thumbnail" src="img/seidl.jpg" alt="Prof. David Seidl">
-											<h4>Prof. David Seidl</h4>
-											<p class="text-muted">Overall Coordination</p>
-											<ul class="list-inline social-buttons">
-													<li><a href="mailto:david.seidl@business.uzh.ch"><i class="fa fa-envelope"></i></a>
-													</li>
-													<li>
-															<a href="mailto:david.seidl@business.uzh.ch">david.seidl@business.uzh.ch</a>
-													</li>
-											</ul>
-									</div>
-							</div>
-							<div class="col-sm-6">
-									<div class="team-member">
-											<img class="contact-thumbnail" src="img/splitter.jpg" alt="Violetta Splitter">
-											<h4>Violetta Splitter</h4>
-											<p class="text-muted">Membership Chair</p>
-											<ul class="list-inline social-buttons">
-													<li><a href="mailto:violetta.splitter@business.uzh.ch"><i class="fa fa-envelope"></i></a>
-													</li>
-													<li>
-															<a href="mailto:violetta.splitter@business.uzh.ch">violetta.splitter@business.uzh.ch</a>
-													</li>
-											</ul>
-									</div>
-							</div>
-					</div>
+				<div class="row text-center extra-spacing-top">
+					<div class="col-sm-6">
+						<div class="team-member">
+							<img class="contact-thumbnail" src="img/seidl.jpg" alt="Prof. David Seidl">
+							<h4>Prof. David Seidl</h4>
+							<p class="text-muted">Overall Coordination</p>
+							<ul class="list-inline social-buttons">
+								<li>
+                                    <a href="mailto:david.seidl@business.uzh.ch"><i class="fa fa-envelope"></i></a>
+								</li>
+								<li>
+									<a href="mailto:david.seidl@business.uzh.ch">david.seidl@business.uzh.ch</a>
+								</li>									</ul>
+						</div>
+				    </div>
 
-					<div class="white-space">
+                    <div class="col-sm-6">
+						<div class="team-member">
+							<img class="contact-thumbnail" src="img/whittington.jpg" alt="Richard Whittington">
+							<h4>Richard Whittington</h4>
+								<p class="text-muted">Overall Coordination</p>
+								<ul class="list-inline social-buttons">
+									<li>
+                                        <a href="mailto:richard.whittington@new.ox.ac.uk"><i class="fa fa-envelope"></i></a>
+									</li>
+									<li>
+										<a href="mailto:richard.whittington@new.ox.ac.uk">richard.whittington@new.ox.ac.uk</a>
+									</li>
+								</ul>
+						</div>
 					</div>
+				</div>
 
-					<div class="row text-center">
-							<div class="col-sm-6">
-									<div class="team-member">
-											<img class="contact-thumbnail" src="img/contact-placeholder.jpg" alt="Prof. David Seidl">
-											<h4>Max Mustermann</h4>
-											<p class="text-muted">Membership Chair</p>
-											<ul class="list-inline social-buttons">
-													<li><a href="mailto:mustermann@business.uzh.ch"><i class="fa fa-envelope"></i></a>
-													</li>
-													<li>
-															<a href="mailto:mustermann@business.uzh.ch">mustermann@business.uzh.ch</a>
-													</li>
-											</ul>
-									</div>
-							</div>
-							<div class="col-sm-6">
-									<div class="team-member">
-											<img class="contact-thumbnail" src="img/contact-placeholder.jpg" alt="Violetta Splitter">
-											<h4>Max Mustermann</h4>
-											<p class="text-muted">Membership Chair</p>
-											<ul class="list-inline social-buttons">
-													<li><a href="mailto:@business.uzh.ch"><i class="fa fa-envelope"></i></a>
-													</li>
-													<li>
-															<a href="mailto:mustermann@business.uzh.ch">mustermann@business.uzh.ch</a>
-													</li>
-											</ul>
-									</div>
-							</div>
-					</div>
+				<div class="row text-center">
+                    <div class="col-sm-6">
+                        <div class="team-member">
+                            <img class="contact-thumbnail" src="img/dobusch.jpg" alt="Leonhard Dobusch">
+                            <h4>Leonhard Dobusch</h4>
+                            <p class="text-muted">Overall Coordination</p>
+                            <ul class="list-inline social-buttons">
+                                <li>
+                                    <a href="mailto:leonhard.dobusch@fu-berlin.de"><i class="fa fa-envelope"></i></a>
+                                </li>
+                                <li>
+                                    <a href="mailto:leonhard.dobusch@fu-berlin.de">leonhard.dobusch@fu-berlin.de</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
 
-					<div class="white-space">
-					</div>
-					
+                    <div class="col-sm-6">
+                        <div class="team-member">
+                            <img class="contact-thumbnail" src="img/splitter.jpg" alt="Violetta Splitter">
+                                <h4>Violetta Splitter</h4>
+                                <p class="text-muted">Membership Chair</p>
+                                <ul class="list-inline social-buttons">
+                                    <li>
+                                        <a href="mailto:violetta.splitter@business.uzh.ch"><i class="fa fa-envelope"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="mailto:violetta.splitter@business.uzh.ch">violetta.splitter@business.uzh.ch</a>
+                                    </li>
+                                </ul>
+                        </div>
+                    </div>
+				</div>
 			</div>
 	</section>
 </template>
