SeeMoreButtons, 1st Version p-settings

--- a/client/templates/guests/bibliographyGuests.html
+++ b/client/templates/guests/bibliographyGuests.html
@@ -10,7 +10,7 @@
 				<div class="header-bibliography-inner">
 					<h1>Bibliography</h1>
 					<hr>
-					<h2>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</h2>
+					<h2>The Bibliography is a repository of Open Strategy related books, articles and working papers. You can search for "author", "year" or "keywords" to find relevant resources. The Bibliography is designed to be dynamic, growing with the OSN to include new knowledge and resources.</h2>
 				</div>
 			</div>
 		</header> <!-- ./Stage -->
