--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -72,7 +72,7 @@
 
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<button href="news.html" class="btn btn-primary page-scroll extra-spacing-bottom">SEE MORE</button>
+					<button class="btn btn-primary page-scroll extra-spacing-bottom js-seeMoreNE">SEE MORE</button>
 				</div>
 			</div>
 		</div>
